samples/_failures_safe/1761443204_8db096_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5fdea1ae.c: In function ‘main’:
./samples/SAFE/__tmp_5fdea1ae.c:172:5: error: expected declaration or statement at end of input
  172 |     if (len > 0 && input[len-1] == '\n') {
      |     ^~
./samples/SAFE/__tmp_5fdea1ae.c:172:5: error: expected declaration or statement at end of input
